# trabalho-3-2-dna-profiler-Gabrienzo

./: CMakeLists.txt  README.md  author.md
data/: dataplus.csv  script.txt  sequence_letum.txt  sequence_simetra.txt
include/: bancodedados.h  dna.h  interface.h  processador.h  sequencia.h
src/: bancodedados.cpp  dna.cpp  dna_profiler.cpp  interface.cpp  processador.cpp  sequencia.cpp
